--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=TrackMyLost-api
 APP_ENV=local
 APP_KEY=base64:SBSgHvb03l+o59oS62kEaqRznargWEW+/00tqOvdQww=
 APP_DEBUG=true
